@startuml ER
!define table(x) class x
!define primary_key(x) - x
left to right direction
hide circle
hide methods

table(repos) {
  primary_key(nameWithOwner)
}

table(repoStats) {
  primary_key(nameWithOwner（FK）)
  updated
  created
  issueCount
  forkCount
}

table(stars) {
  primary_key(nameWithOwner（FK）)
  totalCount
  starAtsJSON
}

table(downloads) {
  primary_key(nameWithOwner（FK）)
  downloadsJSON
}

repos "1" -- "1" repoStats
repos "1" -- "1" stars
repos "1" -- "1" downloads

@enduml
